Progress bar & UI changes

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -80,7 +80,7 @@
           </div>
         <!-- File uploader with Drag & Drop ENDS HERE -->
           <!-- Annotation Start Here -->
-          <div class="annotation" *ngIf="selectedSourceType.sourceType==='faq'">
+          <div class="annotation" *ngIf="selectedSourceType.resourceType==='importfaq'">
             <div class="kr-sg-checkbox">
               <input id="checkbox-1" class="checkbox-custom" type="checkbox" (change)="annotateChange($event)">
               <label for="checkbox-1" class="checkbox-custom-label">Annotate & Extract</label>
