--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -14,26 +14,32 @@
           <img *ngIf="!searchSources" class="search-icon" src="assets/images/search_gray.svg">
         </div>
         <div>
+          <!-- <button *ngIf="!loadingContent" class="kr-sg-button-primary btn_lg button-link-bots"
+            (click)="openLinkExistingBotsComponent()">Link
+            Bots</button> -->
+          <button *ngIf="!loadingContent" class="button-link-bots"
+            (click)="openLinkExistingBotsComponent()"><img class="add-icon" src="assets/icons/sidemenu/plus-table.svg">&nbsp;<span class="button-link-bots-label">Link
+            Bots</span></button>
+
           <div *ngIf="currentView === 'list' && (bots && bots.length) " class="grid-list-view-table"
             (click)="currentView='grid'" ngbTooltip='Grid'><img src="assets/icons/grid-view.svg"></div>
           <div *ngIf="currentView === 'grid' && (bots && bots.length)" class="grid-list-view-table"
             (click)="currentView='list'" ngbTooltip='List'><img src="assets/icons/list-view.svg">
           </div>
-          <button *ngIf="!loadingContent" class="kr-sg-button-primary btn_lg button-link-bots"
-            (click)="openLinkExistingBotsComponent()">Link
-            Bots</button>
-          <div *ngIf="bots && bots.length && !loadingContent" class="kr-sg-dropdowns" ngbDropdown [container]="'body'"
-            [placement]="'bottom-right'">
-            <div class="dropdown dropdown-open">
 
+          <!-- <div *ngIf="bots && bots.length && !loadingContent" class="kr-sg-dropdowns" ngbDropdown [container]="'body'"
+            [placement]="'bottom-right'">
+             <div class="dropdown dropdown-open">
               <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img
                   src="assets/icons/elipse.svg"></button>
               <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
-                <li><span class="list-name">All</span></li>
-                <!-- <li (click)="openLinkExistingBotsComponent()"><span class="list-name">Link Existing Bots</span></li> -->
-              </ul>
-            </div>
-          </div>
+                <li><span class="list-name">All</span></li> -->
+
+          <!-- <li (click)="openLinkExistingBotsComponent()"><span class="list-name">Link Existing Bots</span></li> -->
+
+          <!-- </ul>
+            </div> 
+          </div> -->
         </div>
       </div>
       <section class="table-content" *ngIf="currentView === 'list' && (bots && bots.length) && !loadingContent">
@@ -41,7 +47,7 @@
         <header class="table-header">
           <!-- <div class="col_ col-3" (click)="sortBy('')">Bot<img src="assets/icons/caretDown.svg"
               class="ml-1 sortImg downArrow"><img src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow"></div> -->
-          <div class="col_ col-3 d-flex align-items-center" (click)="sortBy('name')">Task<img
+          <div class="col_ col-4 d-flex align-items-center" (click)="sortBy('name')">Task<img
               [ngClass]="getSortIconVisibility('name', 'down')" src="assets/icons/caretDown.svg"
               class="ml-1 sortImg downArrow"><img [ngClass]="getSortIconVisibility('name', 'up')"
               src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow"></div>
@@ -53,19 +59,19 @@
               [ngClass]="getSortIconVisibility('noOfClicks', 'down')" src="assets/icons/caretDown.svg"
               class="ml-1 sortImg downArrow"><img [ngClass]="getSortIconVisibility('noOfClicks', 'up')"
               src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow"></div>
-          <div class="col_ col-1 d-flex align-items-center"></div>
+          <!-- <div class="col_ col-1 d-flex align-items-center"></div> -->
         </header>
         <perfect-scrollbar class="table-scroll-perfect">
           <ng-container>
             <div class="content-body" *ngFor="let source of bots | filter: [ searchSources, 'name' ]">
               <!-- <div class="col_ col-3">{{linkedBotName}}</div> -->
-              <div class="col_ col-3">{{source.name}}</div>
+              <div class="col_ col-4">{{source.name}}</div>
               <div class="col_ col-4"> {{source.noOfAppearences?source.noOfAppearences:'-'}}</div>
               <div class="col_ col-4">{{source.noOfClicks?source.noOfClicks:'-'}}</div>
-              <div class="col_ col-1 p-0">
-                <span class="action-links" (click)="deleteTask(source._id)"><img class="action_icon"
+              <!-- <div class="col_ col-1 p-0">
+                <span class="action-links d-none" (click)="deleteTask(source._id)"><img class="action_icon"
                     src="assets/icons/delete-table.svg" ngbTooltip="Delete Task" container="body"></span>
-              </div>
+              </div> -->
             </div>
           </ng-container>
           <div class="empty">No Results found</div>
@@ -85,13 +91,14 @@
       <div class="list-view-data">
         <div class="row row_list">
           <h4 class="title-linked-bot">{{linkedBotName}}</h4>
-          <div class="box-content" *ngFor="let source of bots | filter: [ searchSources, 'name' ]"> <!-- (click)="openStatusSlider(source) -->
+          <div class="box-content" *ngFor="let source of bots | filter: [ searchSources, 'name' ]">
+            <!-- (click)="openStatusSlider(source) -->
             <div class="bot-box text-left">
               <div class="boxContent">
                 <div class="action Icon"><img class="action_icon" src="assets/images/botActionTaskIcon.svg"></div>
                 <div class="detailsContainer">
-                  <span class="actions-links" (click)="deleteTask(source._id)" ngbTooltip='Delete Task'
-                    [container]="'body'"> <!-- deletePages('source', source, $event)-->
+                  <span class="actions-links d-none" (click)="deleteTask(source._id)" ngbTooltip='Delete Task'
+                    [container]="'body'"> deletePages('source', source, $event)
                     <img class="action_icon" src="assets/icons/sidemenu/delete-table.svg">
                   </span>
                   <div class="title-bot btm-title">{{source.name}}</div>
