FLY-150 issue fixed

--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -486,7 +486,7 @@
   </div>
 </kr-modal>
 
-<kr-modal modalType="center" #addSourceModalPop modalClass="add-web-croling-upload-file">
+<kr-modal modalType="center" #addSourceModalPop modalClass="add-web-croling-upload-file zIndex-adjust">
   <ng-container *ngIf="showSourceAddition">
     <app-add-source [inputClass]='"faqSourceAddition"' [resourceIDToOpen]="showSourceAddition"
       (saveEvent)="onSourceAdditionSave($event)" (cancleEvent)="onSourceAdditionClose($event)"></app-add-source>
