--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1191,3 +1191,6 @@ div.divBlockEmptylastChild:first-child {
         overflow: hidden;
     }
 }
+.zIndex-adjust{
+    z-index: 1050 !important;
+}
