--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -729,6 +729,10 @@
                 cursor: pointer;
             }
         }
+        // .m10{
+        //     margin: 10px !important;
+        // }
+        
         .allow-urls-sec{
             align-items: center;
             padding: 19px 10px 19px 20px;
@@ -1110,3 +1114,9 @@
     }
 }
 
+.label_text_dis{
+    color: #202124 !important;
+    margin: 10px !important;
+    font-size: 14px  !important;
+    font-weight: bold  !important;
+}
